Fix all language switching and theme issues: Add variable declarations, bilingual support for all pages

--- a/article.html
+++ b/article.html
@@ -608,7 +608,7 @@
         <a href="index.html" class="back-button" data-zh="← 返回首页" data-en="← Back to Home">← 返回首页</a>
 
         <div id="articleContainer">
-            <div class="loading">加载中...</div>
+            <div class="loading" data-zh="加载中..." data-en="Loading...">加载中...</div>
         </div>
     </div>
 
@@ -618,7 +618,7 @@
         const articleId = urlParams.get('id');
 
         if (!articleId) {
-            document.getElementById('articleContainer').innerHTML = '<p>未找到文章</p>';
+            document.getElementById('articleContainer').innerHTML = '<p data-zh="未找到文章" data-en="Article not found">未找到文章</p>';
         } else {
             // 加载文章数据
             fetch('articles.json')
@@ -627,7 +627,7 @@
                     const article = articles.find(a => a.id === articleId);
 
                     if (!article) {
-                        document.getElementById('articleContainer').innerHTML = '<p>未找到文章</p>';
+                        document.getElementById('articleContainer').innerHTML = '<p data-zh="未找到文章" data-en="Article not found">未找到文章</p>';
                         return;
                     }
 
@@ -644,28 +644,28 @@
                             // 渲染文章
                             document.getElementById('articleContainer').innerHTML = `
                                 <div class="breadcrumb">
-                                    <a href="index.html">首页</a>
+                                    <a href="index.html" data-zh="首页" data-en="Home">首页</a>
                                     <span>&gt;</span>
-                                    <a href="index.html#articles">文章</a>
+                                    <a href="index.html#articles" data-zh="文章" data-en="Articles">文章</a>
                                     <span>&gt;</span>
-                                    <span>${article.categoryName}</span>
+                                    <span data-zh="${article.categoryName}" data-en="${article.categoryNameEn || article.categoryName}">${article.categoryName}</span>
                                 </div>
                                 <div class="article-header">
                                     <div class="article-meta">
-                                        <span>${article.categoryName}</span>
+                                        <span data-zh="${article.categoryName}" data-en="${article.categoryNameEn || article.categoryName}">${article.categoryName}</span>
                                         <span>${article.date}</span>
                                         <span>${article.readTime}</span>
                                     </div>
-                                    <h1 class="article-title">${article.title}</h1>
+                                    <h1 class="article-title" data-zh="${article.title}" data-en="${article.titleEn || article.title}">${article.title}</h1>
                                     <div class="share-buttons">
                                         <button class="share-btn" onclick="shareToTwitter()">
-                                            <span>𝕏</span> 分享到 X
+                                            <span>𝕏</span> <span data-zh="分享到 X" data-en="Share to X">分享到 X</span>
                                         </button>
                                         <button class="share-btn" onclick="shareToWeChat()">
-                                            <span>💬</span> 分享到微信
+                                            <span>💬</span> <span data-zh="分享到微信" data-en="Share to WeChat">分享到微信</span>
                                         </button>
                                         <button class="share-btn" onclick="copyLink()">
-                                            <span>📋</span> 复制链接
+                                            <span>📋</span> <span data-zh="复制链接" data-en="Copy Link">复制链接</span>
                                         </button>
                                     </div>
                                 </div>
@@ -673,13 +673,13 @@
                                     ${htmlContent}
                                 </div>
                                 <div class="related-articles" id="relatedArticles">
-                                    <h3>📚 相关文章</h3>
+                                    <h3 data-zh="📚 相关文章" data-en="📚 Related Articles">📚 相关文章</h3>
                                     <ul class="related-list" id="relatedList">
-                                        <li>加载中...</li>
+                                        <li data-zh="加载中..." data-en="Loading...">加载中...</li>
                                     </ul>
                                 </div>
                                 <div class="comments-section">
-                                    <h2 class="comments-title">💬 评论区</h2>
+                                    <h2 class="comments-title" data-zh="💬 评论区" data-en="💬 Comments">💬 评论区</h2>
                                     <div id="gitalk-container"></div>
                                 </div>
                             `;
@@ -701,18 +701,18 @@
                             document.getElementById('articleContainer').innerHTML = `
                                 <div class="article-header">
                                     <div class="article-meta">
-                                        <span>${article.categoryName}</span>
+                                        <span data-zh="${article.categoryName}" data-en="${article.categoryNameEn || article.categoryName}">${article.categoryName}</span>
                                         <span>${article.date}</span>
                                     </div>
-                                    <h1 class="article-title">${article.title}</h1>
-                                    <p>${article.excerpt}</p>
+                                    <h1 class="article-title" data-zh="${article.title}" data-en="${article.titleEn || article.title}">${article.title}</h1>
+                                    <p data-zh="${article.excerpt}" data-en="${article.excerptEn || article.excerpt}">${article.excerpt}</p>
                                 </div>
                             `;
                         });
                 })
                 .catch(error => {
                     console.error('加载文章列表失败:', error);
-                    document.getElementById('articleContainer').innerHTML = '<p>加载失败</p>';
+                    document.getElementById('articleContainer').innerHTML = '<p data-zh="加载失败" data-en="Failed to load">加载失败</p>';
                 });
         }
 
@@ -821,13 +821,15 @@
 
         // 分享到微信
         function shareToWeChat() {
-            alert('请截图分享或复制链接发送给好友');
+            const msg = currentLang === 'zh' ? '请截图分享或复制链接发送给好友' : 'Please take a screenshot or copy the link to share';
+            alert(msg);
         }
 
         // 复制链接
         function copyLink() {
             navigator.clipboard.writeText(window.location.href).then(() => {
-                alert('链接已复制到剪贴板！');
+                const msg = currentLang === 'zh' ? '链接已复制到剪贴板！' : 'Link copied to clipboard!';
+                alert(msg);
             }).catch(() => {
                 // 降级方案
                 const input = document.createElement('input');
@@ -836,7 +838,8 @@
                 input.select();
                 document.execCommand('copy');
                 document.body.removeChild(input);
-                alert('链接已复制到剪贴板！');
+                const msg = currentLang === 'zh' ? '链接已复制到剪贴板！' : 'Link copied to clipboard!';
+                alert(msg);
             });
         }
 
@@ -854,16 +857,16 @@
                         .slice(0, 5);
 
                     if (related.length === 0) {
-                        relatedList.innerHTML = '<li>暂无相关文章</li>';
+                        relatedList.innerHTML = `<li data-zh="暂无相关文章" data-en="No related articles">暂无相关文章</li>`;
                         return;
                     }
 
                     relatedList.innerHTML = related.map(a =>
-                        `<li><a href="article.html?id=${a.id}">${a.title}</a></li>`
+                        `<li><a href="article.html?id=${a.id}" data-zh="${a.title}" data-en="${a.titleEn || a.title}">${a.title}</a></li>`
                     ).join('');
                 })
                 .catch(() => {
-                    document.getElementById('relatedList').innerHTML = '<li>加载失败</li>';
+                    document.getElementById('relatedList').innerHTML = `<li data-zh="加载失败" data-en="Failed to load">加载失败</li>`;
                 });
         }
 
@@ -1000,7 +1003,7 @@
                 }
             });
 
-            // 更新所有带语言数据的元素
+            // 更新所有带语言数据的元素（包括动态生成的元素）
             document.querySelectorAll('[data-zh][data-en]').forEach(el => {
                 if (el.tagName === 'INPUT') {
                     el.placeholder = el.dataset[lang + 'Placeholder'] || el.dataset[lang];
@@ -1018,6 +1021,17 @@
 
             // 更新页面语言属性
             document.documentElement.lang = lang === 'zh' ? 'zh-CN' : 'en';
+
+            // 如果文章已加载，重新加载文章以更新语言
+            const urlParams = new URLSearchParams(window.location.search);
+            const articleId = urlParams.get('id');
+            if (articleId && document.querySelector('.article-title')) {
+                // 文章已经渲染，更新文章标题
+                const articleTitle = document.querySelector('.article-title');
+                if (articleTitle && articleTitle.dataset[lang]) {
+                    articleTitle.textContent = articleTitle.dataset[lang];
+                }
+            }
 
             // 保存语言偏好
             localStorage.setItem('preferred-lang', lang);
