--- a/products.html
+++ b/products.html
@@ -96,6 +96,7 @@
             --button-text-dark: #000000;
             --color-gray-100: #1a1a1a;
             --color-gray-200: #2a2a2a;
+            --color-gray-500: #999999;
             --color-gray-800: #e0e0e0;
             --color-gray-900: #f5f5f5;
             --color-gray-950: #e0e0e0;
@@ -1066,6 +1067,10 @@
             background: var(--bg-secondary);
         }
 
+        [data-theme="dark"] .result-item {
+            color: var(--text-secondary);
+        }
+
         [data-theme="dark"] .feature-item {
             background: var(--bg-secondary);
         }
@@ -1453,7 +1458,7 @@
                     <p style="text-align: center; color: var(--text-secondary); font-size: 0.9rem; margin-bottom: 15px;" data-zh="套装已包含以下单品，如只需某个可单独购买" data-en="Bundle includes the following items, buy individually if needed">套装已包含以下单品，如只需某个可单独购买</p>
                     <div id="learning-single" class="single-products-in-bundle" style="display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 12px;">
                         <div style="background: var(--bg-card); padding: 15px; border-radius: 10px; text-align: center; position: relative;">
-                            <span style="position: absolute; top: 8px; right: 8px; background: var(--bg-card)3cd; color: #856404; padding: 2px 8px; border-radius: 10px; font-size: 0.75rem;">套装已含</span>
+                            <span style="position: absolute; top: 8px; right: 8px; background: var(--bg-card); color: #856404; padding: 2px 8px; border-radius: 10px; font-size: 0.75rem;">套装已含</span>
                             <div style="font-weight: 600; color: var(--color-gray-800); margin-bottom: 8px;">📝 写作模板大全</div>
                             <div style="color: #ff6b6b; font-weight: bold; font-size: 1.3rem; margin-bottom: 10px;">¥49</div>
                             <div style="display: flex; gap: 8px;">
@@ -1462,7 +1467,7 @@
                             </div>
                         </div>
                         <div style="background: var(--bg-card); padding: 15px; border-radius: 10px; text-align: center; position: relative;">
-                            <span style="position: absolute; top: 8px; right: 8px; background: var(--bg-card)3cd; color: #856404; padding: 2px 8px; border-radius: 10px; font-size: 0.75rem;">套装已含</span>
+                            <span style="position: absolute; top: 8px; right: 8px; background: var(--bg-card); color: #856404; padding: 2px 8px; border-radius: 10px; font-size: 0.75rem;">套装已含</span>
                             <div style="font-weight: 600; color: var(--text-primary); margin-bottom: 8px;">🎯 爆款标题库</div>
                             <div style="color: #ff6b6b; font-weight: bold; font-size: 1.3rem; margin-bottom: 10px;">¥39</div>
                             <div style="display: flex; gap: 8px;">
@@ -1471,7 +1476,7 @@
                             </div>
                         </div>
                         <div style="background: var(--bg-card); padding: 15px; border-radius: 10px; text-align: center; position: relative;">
-                            <span style="position: absolute; top: 8px; right: 8px; background: var(--bg-card)3cd; color: #856404; padding: 2px 8px; border-radius: 10px; font-size: 0.75rem;">套装已含</span>
+                            <span style="position: absolute; top: 8px; right: 8px; background: var(--bg-card); color: #856404; padding: 2px 8px; border-radius: 10px; font-size: 0.75rem;">套装已含</span>
                             <div style="font-weight: 600; color: var(--text-primary); margin-bottom: 8px;">📬 Newsletter指南</div>
                             <div style="color: #ff6b6b; font-weight: bold; font-size: 1.3rem; margin-bottom: 10px;">¥39</div>
                             <div style="display: flex; gap: 8px;">
@@ -1480,7 +1485,7 @@
                             </div>
                         </div>
                         <div style="background: var(--bg-card); padding: 15px; border-radius: 10px; text-align: center; position: relative;">
-                            <span style="position: absolute; top: 8px; right: 8px; background: var(--bg-card)3cd; color: #856404; padding: 2px 8px; border-radius: 10px; font-size: 0.75rem;">套装已含</span>
+                            <span style="position: absolute; top: 8px; right: 8px; background: var(--bg-card); color: #856404; padding: 2px 8px; border-radius: 10px; font-size: 0.75rem;">套装已含</span>
                             <div style="font-weight: 600; color: var(--text-primary); margin-bottom: 8px;">🎨 Notion模板</div>
                             <div style="color: #ff6b6b; font-weight: bold; font-size: 1.3rem; margin-bottom: 10px;">¥29</div>
                             <div style="display: flex; gap: 8px;">
@@ -1770,7 +1775,7 @@
                     <p style="text-align: center; color: var(--text-secondary); font-size: 0.9rem; margin-bottom: 15px;" data-zh="套装已包含以下单品，如只需某个可单独购买" data-en="Bundle includes the following items, buy individually if needed">套装已包含以下单品，如只需某个可单独购买</p>
                     <div id="learning-single" class="single-products-in-bundle" style="display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 12px;">
                         <div style="background: var(--bg-card); padding: 15px; border-radius: 10px; text-align: center; position: relative;">
-                            <span style="position: absolute; top: 8px; right: 8px; background: var(--bg-card)3cd; color: #856404; padding: 2px 8px; border-radius: 10px; font-size: 0.75rem;">套装已含</span>
+                            <span style="position: absolute; top: 8px; right: 8px; background: var(--bg-card); color: #856404; padding: 2px 8px; border-radius: 10px; font-size: 0.75rem;">套装已含</span>
                             <div style="font-weight: 600; color: var(--text-primary); margin-bottom: 8px;">🎯 Notion目标系统</div>
                             <div style="color: #ff6b6b; font-weight: bold; font-size: 1.3rem; margin-bottom: 10px;">¥49</div>
                             <div style="display: flex; gap: 8px;">
@@ -1779,7 +1784,7 @@
                             </div>
                         </div>
                         <div style="background: var(--bg-card); padding: 15px; border-radius: 10px; text-align: center; position: relative;">
-                            <span style="position: absolute; top: 8px; right: 8px; background: var(--bg-card)3cd; color: #856404; padding: 2px 8px; border-radius: 10px; font-size: 0.75rem;">套装已含</span>
+                            <span style="position: absolute; top: 8px; right: 8px; background: var(--bg-card); color: #856404; padding: 2px 8px; border-radius: 10px; font-size: 0.75rem;">套装已含</span>
                             <div style="font-weight: 600; color: var(--text-primary); margin-bottom: 8px;">📊 年度规划模板</div>
                             <div style="color: #ff6b6b; font-weight: bold; font-size: 1.3rem; margin-bottom: 10px;">¥29</div>
                             <div style="display: flex; gap: 8px;">
@@ -1788,7 +1793,7 @@
                             </div>
                         </div>
                         <div style="background: var(--bg-card); padding: 15px; border-radius: 10px; text-align: center; position: relative;">
-                            <span style="position: absolute; top: 8px; right: 8px; background: var(--bg-card)3cd; color: #856404; padding: 2px 8px; border-radius: 10px; font-size: 0.75rem;">套装已含</span>
+                            <span style="position: absolute; top: 8px; right: 8px; background: var(--bg-card); color: #856404; padding: 2px 8px; border-radius: 10px; font-size: 0.75rem;">套装已含</span>
                             <div style="font-weight: 600; color: var(--text-primary); margin-bottom: 8px;">📈 Excel追踪表</div>
                             <div style="color: #ff6b6b; font-weight: bold; font-size: 1.3rem; margin-bottom: 10px;">¥19</div>
                             <div style="display: flex; gap: 8px;">
@@ -2047,7 +2052,7 @@
                     <p style="text-align: center; color: var(--text-secondary); font-size: 0.9rem; margin-bottom: 15px;" data-zh="套装已包含以下单品，如只需某个可单独购买" data-en="Bundle includes the following items, buy individually if needed">套装已包含以下单品，如只需某个可单独购买</p>
                     <div id="learning-single" class="single-products-in-bundle" style="display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 12px;">
                         <div style="background: var(--bg-card); padding: 15px; border-radius: 10px; text-align: center; position: relative;">
-                            <span style="position: absolute; top: 8px; right: 8px; background: var(--bg-card)3cd; color: #856404; padding: 2px 8px; border-radius: 10px; font-size: 0.75rem;">套装已含</span>
+                            <span style="position: absolute; top: 8px; right: 8px; background: var(--bg-card); color: #856404; padding: 2px 8px; border-radius: 10px; font-size: 0.75rem;">套装已含</span>
                             <div style="font-weight: 600; color: var(--text-primary); margin-bottom: 8px;">🧠 第一性原理</div>
                             <div style="color: #ff6b6b; font-weight: bold; font-size: 1.3rem; margin-bottom: 10px;">¥39</div>
                             <div style="display: flex; gap: 8px;">
@@ -2056,7 +2061,7 @@
                             </div>
                         </div>
                         <div style="background: var(--bg-card); padding: 15px; border-radius: 10px; text-align: center; position: relative;">
-                            <span style="position: absolute; top: 8px; right: 8px; background: var(--bg-card)3cd; color: #856404; padding: 2px 8px; border-radius: 10px; font-size: 0.75rem;">套装已含</span>
+                            <span style="position: absolute; top: 8px; right: 8px; background: var(--bg-card); color: #856404; padding: 2px 8px; border-radius: 10px; font-size: 0.75rem;">套装已含</span>
                             <div style="font-weight: 600; color: var(--text-primary); margin-bottom: 8px;">🔄 逆向思维</div>
                             <div style="color: #ff6b6b; font-weight: bold; font-size: 1.3rem; margin-bottom: 10px;">¥39</div>
                             <div style="display: flex; gap: 8px;">
@@ -2065,7 +2070,7 @@
                             </div>
                         </div>
                         <div style="background: var(--bg-card); padding: 15px; border-radius: 10px; text-align: center; position: relative;">
-                            <span style="position: absolute; top: 8px; right: 8px; background: var(--bg-card)3cd; color: #856404; padding: 2px 8px; border-radius: 10px; font-size: 0.75rem;">套装已含</span>
+                            <span style="position: absolute; top: 8px; right: 8px; background: var(--bg-card); color: #856404; padding: 2px 8px; border-radius: 10px; font-size: 0.75rem;">套装已含</span>
                             <div style="font-weight: 600; color: var(--text-primary); margin-bottom: 8px;">🌐 系统思考</div>
                             <div style="color: #ff6b6b; font-weight: bold; font-size: 1.3rem; margin-bottom: 10px;">¥49</div>
                             <div style="display: flex; gap: 8px;">
@@ -2074,7 +2079,7 @@
                             </div>
                         </div>
                         <div style="background: var(--bg-card); padding: 15px; border-radius: 10px; text-align: center; position: relative;">
-                            <span style="position: absolute; top: 8px; right: 8px; background: var(--bg-card)3cd; color: #856404; padding: 2px 8px; border-radius: 10px; font-size: 0.75rem;">套装已含</span>
+                            <span style="position: absolute; top: 8px; right: 8px; background: var(--bg-card); color: #856404; padding: 2px 8px; border-radius: 10px; font-size: 0.75rem;">套装已含</span>
                             <div style="font-weight: 600; color: var(--text-primary); margin-bottom: 8px;">⚖️ 概率思维</div>
                             <div style="color: #ff6b6b; font-weight: bold; font-size: 1.3rem; margin-bottom: 10px;">¥39</div>
                             <div style="display: flex; gap: 8px;">
@@ -2358,7 +2363,7 @@
                     <p style="text-align: center; color: var(--text-secondary); font-size: 0.9rem; margin-bottom: 15px;" data-zh="套装已包含以下单品，如只需某个可单独购买" data-en="Bundle includes the following items, buy individually if needed">套装已包含以下单品，如只需某个可单独购买</p>
                     <div id="learning-single" class="single-products-in-bundle" style="display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 12px;">
                         <div style="background: var(--bg-card); padding: 15px; border-radius: 10px; text-align: center; position: relative;">
-                            <span style="position: absolute; top: 8px; right: 8px; background: var(--bg-card)3cd; color: #856404; padding: 2px 8px; border-radius: 10px; font-size: 0.75rem;">套装已含</span>
+                            <span style="position: absolute; top: 8px; right: 8px; background: var(--bg-card); color: #856404; padding: 2px 8px; border-radius: 10px; font-size: 0.75rem;">套装已含</span>
                             <div style="font-weight: 600; color: var(--text-primary); margin-bottom: 8px;">🎓 费曼学习法</div>
                             <div style="color: #ff6b6b; font-weight: bold; font-size: 1.3rem; margin-bottom: 10px;">¥39</div>
                             <div style="display: flex; gap: 8px;">
@@ -2367,7 +2372,7 @@
                             </div>
                         </div>
                         <div style="background: var(--bg-card); padding: 15px; border-radius: 10px; text-align: center; position: relative;">
-                            <span style="position: absolute; top: 8px; right: 8px; background: var(--bg-card)3cd; color: #856404; padding: 2px 8px; border-radius: 10px; font-size: 0.75rem;">套装已含</span>
+                            <span style="position: absolute; top: 8px; right: 8px; background: var(--bg-card); color: #856404; padding: 2px 8px; border-radius: 10px; font-size: 0.75rem;">套装已含</span>
                             <div style="font-weight: 600; color: var(--text-primary); margin-bottom: 8px;">📅 间隔重复</div>
                             <div style="color: #ff6b6b; font-weight: bold; font-size: 1.3rem; margin-bottom: 10px;">¥39</div>
                             <div style="display: flex; gap: 8px;">
@@ -2376,7 +2381,7 @@
                             </div>
                         </div>
                         <div style="background: var(--bg-card); padding: 15px; border-radius: 10px; text-align: center; position: relative;">
-                            <span style="position: absolute; top: 8px; right: 8px; background: var(--bg-card)3cd; color: #856404; padding: 2px 8px; padding: 2px 8px; border-radius: 10px; font-size: 0.75rem;">套装已含</span>
+                            <span style="position: absolute; top: 8px; right: 8px; background: var(--bg-card); color: #856404; padding: 2px 8px; padding: 2px 8px; border-radius: 10px; font-size: 0.75rem;">套装已含</span>
                             <div style="font-weight: 600; color: var(--text-primary); margin-bottom: 8px;">📖 深度阅读</div>
                             <div style="color: #ff6b6b; font-weight: bold; font-size: 1.3rem; margin-bottom: 10px;">¥49</div>
                             <div style="display: flex; gap: 8px;">
@@ -2385,7 +2390,7 @@
                             </div>
                         </div>
                         <div style="background: var(--bg-card); padding: 15px; border-radius: 10px; text-align: center; position: relative;">
-                            <span style="position: absolute; top: 8px; right: 8px; background: var(--bg-card)3cd; color: #856404; padding: 2px 8px; border-radius: 10px; font-size: 0.75rem;">套装已含</span>
+                            <span style="position: absolute; top: 8px; right: 8px; background: var(--bg-card); color: #856404; padding: 2px 8px; border-radius: 10px; font-size: 0.75rem;">套装已含</span>
                             <div style="font-weight: 600; color: var(--text-primary); margin-bottom: 8px;">🎯 知识管理</div>
                             <div style="color: #ff6b6b; font-weight: bold; font-size: 1.3rem; margin-bottom: 10px;">¥49</div>
                             <div style="display: flex; gap: 8px;">
