--- a/subscribe.html
+++ b/subscribe.html
@@ -118,7 +118,7 @@
 
         .benefits {
             text-align: left;
-            background: #f8f9fa;
+            background: var(--bg-secondary);
             padding: 25px;
             border-radius: 15px;
             margin-bottom: 30px;
